# cloud-case-service-v2

./: Cargo.toml  Dockerfile  dev-deploy  notes.txt  prod-deploy
src/: main.rs
src/api/: case_handler.rs  collaboration_handler.rs  cors.rs  middleware_handler.rs  mod.rs  user_handler.rs
src/config/: mod.rs
src/database/: case.rs  core.rs  mod.rs
src/service/: mod.rs  socket.rs  token.rs  user.rs
src/types/: case_database.rs  case_handler.rs  collaboration_handler.rs  core_database.rs  mod.rs  token_service.rs  user_service.rs
