[package]
name = "case-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_ws = "0.1.1"
rocket_contrib = "0.4"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "mysql" ] }
mongodb = "2.8.2"
dotenvy = "0.15.7"
uuid = { version = "1.1", features = ["v4"] }
