[package]
name = "case-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"
rocket_cors = "0.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8.2"
dotenvy = "0.15.7"
uuid = { version = "1.1", features = ["v4"] }
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
async-std = "1.12.0"
futures = "0.3.30"
